--- a/source/hallway.html
+++ b/source/hallway.html
@@ -18,7 +18,7 @@
         color: blue;
         font-weight: bold;
 }
-	</style>
+		  </style>
 </head>
 
 <body>
@@ -75,3 +75,4 @@
 
 
 </body>
+</html>
